# roarm-painter

./: LICENSE  README.md  pyproject.toml  robot_painter.py
robot_painter/: definitions.py  kinematics.py  robot_interface.py  utils.py
tests/: test_kinematics.py
