[project]
name = "robot-painter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "modern-robotics>=1.1.1",
    "networkx>=3.5",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "rasterio>=1.4.3",
    "requests>=2.32.4",
    "scikit-image>=0.25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
